# staff-training-roi-calculator

./: Cargo.toml  index.html  style.css
.github/workflows/: deploy.yml
src/: lib.rs
www/: index.html
www/pkg/: bootstrap.js  package.json  training_roi_calculator.d.ts  training_roi_calculator.js  training_roi_calculator_bg.wasm  training_roi_calculator_bg.wasm.d.ts
