[package]
name    = "training-roi-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# cdylib → компилируется в .wasm для браузера
# rlib   → нужен для cargo test (юнит-тесты)

[dependencies]
wasm-bindgen       = "0.2"
serde              = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Агрессивная оптимизация размера .wasm файла
opt-level = "z"     # оптимизация по размеру (альтернатива: "s")
lto       = true    # link-time optimization
